--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.ui:ui-framework:0.1.0-dev03'
     implementation 'androidx.ui:ui-layout:0.1.0-dev03'
+    implementation 'androidx.ui:ui-foundation:0.1.0-dev03'
     implementation 'androidx.ui:ui-material:0.1.0-dev03'
     implementation 'androidx.ui:ui-tooling:0.1.0-dev03'
     testImplementation 'junit:junit:4.12'
