Migrate to dev04

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ android {
     buildFeatures {
         compose true
     }
-
+    composeOptions {
+        kotlinCompilerExtensionVersion "0.1.0-dev04"
+    }
 }
 
 dependencies {
@@ -42,12 +44,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation "androidx.lifecycle:lifecycle-livedata:2.1.0"
-    implementation 'androidx.ui:ui-framework:0.1.0-dev03'
-    implementation 'androidx.ui:ui-layout:0.1.0-dev03'
-    implementation 'androidx.ui:ui-foundation:0.1.0-dev03'
-    implementation 'androidx.ui:ui-material:0.1.0-dev03'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev03'
-    implementation 'com.github.zsoltk:compose-router:0.3.1'
+    implementation 'androidx.ui:ui-framework:0.1.0-dev04'
+    implementation 'androidx.ui:ui-layout:0.1.0-dev04'
+    implementation 'androidx.ui:ui-foundation:0.1.0-dev04'
+    implementation 'androidx.ui:ui-material:0.1.0-dev04'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev04'
+    implementation 'com.github.zsoltk:compose-router:0.4.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.17"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     testImplementation 'junit:junit:4.12'
